recursion.lessons.recursion.tree.Tree.scala.error
Tree:6: error: ':' expected but ',' found.
def treer(steps,length,angle,shrink){
               ^Tree:13: error: identifier expected but '}' found.
}
^